--- a/promise-usage.html
+++ b/promise-usage.html
@@ -127,6 +127,23 @@
     testPromise();
     testPromise();
     testPromise();
+
+
+    /************ promise 之间的相互调用 *************/
+    let np_1 = new Promise(function (resolve, reject) {
+        console.log('np_1 entering')
+        setTimeout( () => reject(new Error('np_1 fail')), 3000);
+    });
+    let np_2 = new Promise(function (resolve, reject) {
+        console.log('np_2 entering')
+        setTimeout( () => resolve(np_1), 1000);
+    });
+
+    np_2
+    .then(result => console.log(result))
+    .catch (error => console.log(error));
+
+
 </script>
 
 </html>
