--- a/hover-test.html
+++ b/hover-test.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+    <meta charset="UTF-8">
+    <title>ä»²å¤Â·ä¹‹å¤œ</title>
 <style>
     #a {color : #FFFF00;}
     #a:hover > #b{color : #FF0000;}    
@@ -40,35 +42,35 @@
  
     div:hover p, p:hover{display: block;}
 </style>
-<div id='a'>ÔªËØ1
-  <div id='b'>ÔªËØ2</div>
+<div id='a'>å…ƒç´ 1
+  <div id='b'>å…ƒç´ 2</div>
 </div>
-<div id='c'>ÔªËØ3
-  <div id='d'>ÔªËØ4</div>
-</div>
-
-<hr />
-<div id='s1'>ÔªËØS1
-  <div class='item'>ÔªËØS11</div>
+<div id='c'>å…ƒç´ 3
+  <div id='d'>å…ƒç´ 4</div>
 </div>
 
 <hr />
-<div class='s2'>ÔªËØS2
-  <div class='item'>ÔªËØS21</div>
-</div>
-<div class='s2'>ÔªËØ3
-  <div class='item dn'>ÔªËØS31</div>
-</div>
-<div class='s2'>ÔªËØS4
-  <div class='item'>ÔªËØS41</div>
+<div id='s1'>å…ƒç´ S1
+  <div class='item'>å…ƒç´ S11</div>
 </div>
 
 <hr />
-<h3>hover À´ÊµÏÖÊó±êÒÆµ½Í¼Æ¬ÉÏÏÔÊ¾½âÊÍÎÄ×Ö</h3>
+<div class='s2'>å…ƒç´ S2
+  <div class='item'>å…ƒç´ S21</div>
+</div>
+<div class='s2'>å…ƒç´ 3
+  <div class='item dn'>å…ƒç´ S31</div>
+</div>
+<div class='s2'>å…ƒç´ S4
+  <div class='item'>å…ƒç´ S41</div>
+</div>
+
+<hr />
+<h3>hover æ¥å®ç°é¼ æ ‡ç§»åˆ°å›¾ç‰‡ä¸Šæ˜¾ç¤ºè§£é‡Šæ–‡å­—</h3>
 <div class="video_select">
   <a href=""><img src="3.jpg" style="width:50px;height:80px;" alt="" /></a>
   
-  <!-- ×¢Òâ£º²»Òª°Ñdisplay£ºnone Ğ´ÔÚp±êÇ©ÉÏ£¬Ğ´ÔÚCSSÖĞ -->
+  <!-- æ³¨æ„ï¼šä¸è¦æŠŠdisplayï¼šnone å†™åœ¨pæ ‡ç­¾ä¸Šï¼Œå†™åœ¨CSSä¸­ -->
   <p>Boddy is a #2 Diabetic who weighted 274 pounds.
       After a change in diet he is no longer on medicatio.Runtime:46 sec
   </p>
