--- a/hover-test.html
+++ b/hover-test.html
@@ -77,5 +77,9 @@
   <h2><a href="#">Living with Diabetic;Boddy's story</a></h2>
 </div>
 
+    <script src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
+    <script>
+        alert(!!window.$)
+    </script>
 </body>
 </html>
